name:                sat
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              welp
maintainer:          welperooni@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Sat
  -- other-modules:
  -- other-extensions:
  build-depends:       base
                     , recursion
                     , parsec
  hs-source-dirs:      src
  default-language:    Haskell2010

executable sat
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base
                     , sat
  hs-source-dirs:      app
  default-language:    Haskell2010
